chore: change owner

--- a/options.html
+++ b/options.html
@@ -54,6 +54,7 @@
 	<p id="status">Change values to update them</p>
 
 	<p class="message hidden">
-		Hello everyone, welcome to version 0.3.0! See the changelog at the <a href="https://github.com/matthias-vogt/tab-limiter/releases" target="_blank">github repo</a>. Thanks for using Tab Limiter! :)
+		Hello everyone, welcome to version 0.3.1! See the changelog at the <a href="https://github.com/angeliski/tab-limiter/releases" target="_blank">github repo</a>. Thanks for using The Tab Limiter! :)
 	</p>
+	<p>New features and improvements coming soon!</p>
 </body>
